SERVER-108722: check the local shared_ptr, not its unprotected copy (#39990)

GitOrigin-RevId: 611e325c81f58a780c30c68fc3949b43ab65badf